--- a/package.json
+++ b/package.json
@@ -10,15 +10,21 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@radix-ui/react-navigation-menu": "^1.2.13",
+    "@radix-ui/react-slot": "^1.2.3",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "class-variance-authority": "^0.7.1",
+    "framer-motion": "^12.12.2",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.511.0",
     "react": "^18.2.0",
-    "react-scripts": "^5.0.1",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.16.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.30.0",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
