--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@testing-library/user-event": "^13.5.0",
     "class-variance-authority": "^0.7.1",
     "framer-motion": "^12.12.2",
+    "i18next": "^25.2.1",
+    "i18next-browser-languagedetector": "^8.1.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.511.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^15.5.2",
     "react-intersection-observer": "^9.16.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.30.0",
